# searchEngine

./: CMakeLists.txt  README.md
SearchEngine/: CMakeLists.txt  Converter.h  Index.h  answer.JSON  config.JSON  main.cpp  requests.JSON
Test/: CMakeLists.txt  testing.cpp
